oqct-app/main/default/objects/DC_Result__c/DC_Result__c.object-meta.xml
<CustomObject>
    <description>This object stores complete results of the process</description>
    <label>DC-Result</label>
    <nameField>
        <displayFormat>DC-Result-{00000000}</displayFormat>
        <label>DC Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>