oqct-app/main/default/objects/DC_Result__c/fields/Attempt_No__c.field-meta.xml
<CustomField>
    <fullName>Attempt_No__c</fullName>
    <description>The attempt for a particular process</description>
    <inlineHelpText>The attempt for a particular process</inlineHelpText>
    <label>Attempt No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>