oqct-app/main/default/objects/DC_Result__c/fields/Backup_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Backup_Expiry_Date__c</fullName>
    <description>The date time on which backup associated with these results will be expired</description>
    <inlineHelpText>The date time on which backup associated with these results will be expired</inlineHelpText>
    <label>Backup Expiry Date</label>
    <type>DateTime</type>
</CustomField>