oqct-app/main/default/objects/DC_Result__c/fields/Backup_Files_Found__c.field-meta.xml
<CustomField>
    <fullName>Backup_Files_Found__c</fullName>
    <formula>IF(Total_Backup_files__c &gt; 0, &apos;YES&apos;, &apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backup Files Found</label>
    <type>Text</type>
</CustomField>