oqct-app/main/default/objects/DC_Result__c/fields/Child_Batch_Information_Json__c.field-meta.xml
<CustomField>
    <fullName>Child_Batch_Information_Json__c</fullName>
    <description>The field is used internally to track if parallel batches of child are completed</description>
    <inlineHelpText>The field is used internally to track if parallel batches of child are completed</inlineHelpText>
    <label>Child Batch Information (Json)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>