oqct-app/main/default/objects/DC_Result__c/fields/Data_Clean_Child_Backup_File_Names__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Child_Backup_File_Names__c</fullName>
    <description>The name of the backup files generated during the process (Childs Only)</description>
    <inlineHelpText>The name of the backup files generated during the process (Childs Only)</inlineHelpText>
    <label>Data Clean Child Backup File Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>