oqct-app/main/default/objects/DC_Result__c/fields/Data_Clean_Parent_Backup_File_Names__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Parent_Backup_File_Names__c</fullName>
    <description>The name of the backup files generated during the process (Parent Only)</description>
    <inlineHelpText>The name of the backup files generated during the process (Parent Only)</inlineHelpText>
    <label>Data Clean Parent Backup File Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>