oqct-app/main/default/objects/DC_Result__c/fields/DC_Configuration__c.field-meta.xml
<CustomField>
    <fullName>DC_Configuration__c</fullName>
    <description>The Configuration with which the result record is associated with</description>
    <inlineHelpText>The Configuration with which the result record is associated with</inlineHelpText>
    <label>DC-Configuration</label>
    <referenceTo>DC_Configuration__c</referenceTo>
    <relationshipName>DC_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>