oqct-app/main/default/objects/DC_Result__c/fields/Disable_Rollback_Button__c.field-meta.xml
<CustomField>
    <fullName>Disable_Rollback_Button__c</fullName>
    <description>If true, the rollback button on DC-Results will be disabled</description>
    <formula>!AND(
    TEXT(Process__c) != &apos;Rollback&apos;,
    Total_Backup_files__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If true, the rollback button on DC-Results will be disabled</inlineHelpText>
    <label>Disable Rollback Button</label>
    <type>Checkbox</type>
</CustomField>