oqct-app/main/default/objects/DC_Result__c/fields/Is_All_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Job_Completed__c</fullName>
    <description>True if both Parent and Child are done processing</description>
    <formula>AND( Is_Parent_Job_Completed__c, Is_Child_Job_Completed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if both Parent and Child are done processing</inlineHelpText>
    <label>Is All Job Completed</label>
    <type>Checkbox</type>
</CustomField>