oqct-app/main/default/objects/DC_Result__c/fields/Is_Child_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Job_Completed__c</fullName>
    <description>True if the processing of the all child object&apos;s record is completed; otherwise False</description>
    <formula>Total_Completed_Child__c = Total_DC_Related_Results__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the processing of the all child object&apos;s record is completed; otherwise False</inlineHelpText>
    <label>Is Child Job Completed</label>
    <type>Checkbox</type>
</CustomField>