oqct-app/main/default/objects/DC_Result__c/fields/Is_Parent_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the processing of the parent object&apos;s record is completed; otherwise False</description>
    <inlineHelpText>True if the processing of the parent object&apos;s record is completed; otherwise False</inlineHelpText>
    <label>Is Parent Job Completed</label>
    <type>Checkbox</type>
</CustomField>