oqct-app/main/default/objects/DC_Result__c/fields/Job_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Complete_Date__c</fullName>
    <description>The Date Time on which the job was completed</description>
    <formula>IF(ISPICKVAL(Job_Status__c,&apos;Completed&apos;), LastModifiedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Date Time on which the job was completed</inlineHelpText>
    <label>Job Complete Date</label>
    <type>DateTime</type>
</CustomField>