oqct-app/main/default/objects/DC_Result__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>The name of the scheduled Job</description>
    <inlineHelpText>The name of the scheduled Job</inlineHelpText>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>