oqct-app/main/default/objects/DC_Result__c/fields/Job_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Schedule_Date__c</fullName>
    <description>The Date-Time on which the job is/was scheduled</description>
    <inlineHelpText>The Date-Time on which the job is/was scheduled</inlineHelpText>
    <label>Job Schedule Date</label>
    <type>DateTime</type>
</CustomField>