oqct-app/main/default/objects/DC_Result__c/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <description>The Date-Time on which the job was started</description>
    <inlineHelpText>The Date-Time on which the job was started</inlineHelpText>
    <label>Job Start Date</label>
    <type>DateTime</type>
</CustomField>