oqct-app/main/default/objects/DC_Result__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <description>The status/progress of the process</description>
    <inlineHelpText>The status/progress of the process</inlineHelpText>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Job_Status</valueSetName>
    </valueSet>
</CustomField>