oqct-app/main/default/objects/DC_Result__c/fields/Job_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Submit_Date__c</fullName>
    <description>The Date Time on which the job was submitted</description>
    <formula>IF(
    OR(
        AND(
            OR(
                ISPICKVAL(DC_Configuration__r.Data_Clean_Action__c, &apos;Masking + Deletion&apos;),
                ISPICKVAL(DC_Configuration__r.Data_Clean_Action__c, &apos;Masking + Rollback + Deletion&apos;)
            ),
            !ISPICKVAL(Process__c, &apos;Masking&apos;)
        ),
        AND(
            ISPICKVAL(DC_Configuration__r.Data_Clean_Action__c,  &apos;Archive + Deletion&apos;),
            !ISPICKVAL(Process__c, &apos;Archive&apos;)
        )
    ),
    DC_Configuration__r.Process2_Job_Submit_Date__c,
    DC_Configuration__r.Job_Submit_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Date Time on which the job was submitted</inlineHelpText>
    <label>Job Submit Date</label>
    <type>DateTime</type>
</CustomField>