oqct-app/main/default/objects/DC_Result__c/fields/Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Name__c</fullName>
    <description>The name of the master object associated with the configuration</description>
    <formula>DC_Configuration__r.Master_Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the master object associated with the configuration</inlineHelpText>
    <label>Master Object Name</label>
    <type>Text</type>
</CustomField>