oqct-app/main/default/objects/DC_Result__c/fields/Overall_Result__c.field-meta.xml
<CustomField>
    <fullName>Overall_Result__c</fullName>
    <description>The process treatment result status of the parent  and related records combine</description>
    <formula>IF(
    !Is_All_Job_Completed__c,
    &apos;Pending&apos;,
    IF(
        AND(Total_Success__c &gt; 0, Total_Failure__c = 0),
        &apos;Success&apos;,
        IF(
            AND(Total_Success__c = 0, Total_Failure__c &gt; 0),
            &apos;Failed&apos;,
            IF(
                AND(Total_Success__c &gt; 0, Total_Failure__c &gt; 0),
                &apos;Partial Success&apos;,
                IF(
                    AND(Total_Success__c = 0, Total_Failure__c = 0),
                    &apos;No Records Found&apos;,
                    null
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The process treatment result status of the parent  and related records combine</inlineHelpText>
    <label>Overall Result</label>
    <type>Text</type>
</CustomField>