oqct-app/main/default/objects/DC_Result__c/fields/Parent_Field_History_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_History_Deletion_Status__c</fullName>
    <description>Field History Deletion Status of Master (Parent) Object</description>
    <inlineHelpText>Field History Deletion Status of Master (Parent) Object</inlineHelpText>
    <label>Parent Field History Deletion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_History_Deletion_Status</valueSetName>
    </valueSet>
</CustomField>