oqct-app/main/default/objects/DC_Result__c/fields/Previous_Job_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Job_Completion_Date__c</fullName>
    <description>The date-time on which the previous job associated with the DC-Configuration was completed</description>
    <inlineHelpText>The date-time on which the previous job associated with the DC-Configuration was completed</inlineHelpText>
    <label>Previous Job Completion Date</label>
    <type>DateTime</type>
</CustomField>