oqct-app/main/default/objects/DC_Result__c/fields/Related_Result__c.field-meta.xml
<CustomField>
    <fullName>Related_Result__c</fullName>
    <description>The process treatment result status of the related records</description>
    <formula>IF(
    !(Is_Child_Job_Completed__c),
    &apos;Pending&apos;,
    IF(
        AND(Total_Success_Child__c &gt; 0, Total_Failure_Child__c = 0),
        &apos;Success&apos;,
        IF(
            AND(Total_Success_Child__c = 0, Total_Failure_Child__c &gt; 0),
            &apos;Failed&apos;,
            IF(
                AND(Total_Success_Child__c &gt; 0, Total_Failure_Child__c &gt; 0),
                &apos;Partial Success&apos;,
                IF(
                    AND(Total_Success_Child__c = 0, Total_Failure_Child__c = 0),
                    &apos;No Records Found&apos;,
                    null
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The process treatment result status of the related records</inlineHelpText>
    <label>Related Result</label>
    <type>Text</type>
</CustomField>