oqct-app/main/default/objects/DC_Result__c/fields/Total_Backup_files__c.field-meta.xml
<CustomField>
    <fullName>Total_Backup_files__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number backup files associated with the DC-Result record</description>
    <inlineHelpText>The total number backup files associated with the DC-Result record</inlineHelpText>
    <label>Total Backup files</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>