oqct-app/main/default/objects/DC_Result__c/fields/Total_Completed_Child__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Child__c</fullName>
    <description>Total number of child object which are done processing</description>
    <inlineHelpText>Total number of child object which are done processing</inlineHelpText>
    <label>Total Completed Child</label>
    <summaryFilterItems>
        <field>DC_Related_Result__c.Is_Related_Job_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DC_Related_Result__c.DC_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>