oqct-app/main/default/objects/DC_Result__c/fields/Total_DC_Related_Results__c.field-meta.xml
<CustomField>
    <fullName>Total_DC_Related_Results__c</fullName>
    <description>Total number of child object&apos;s result associated with parent result</description>
    <inlineHelpText>Total number of child object&apos;s result associated with parent result</inlineHelpText>
    <label>Total DC-Related Results</label>
    <summaryForeignKey>DC_Related_Result__c.DC_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>