oqct-app/main/default/objects/DC_Result__c/fields/Total_Failure__c.field-meta.xml
<CustomField>
    <fullName>Total_Failure__c</fullName>
    <description>The total number of records failed during the process</description>
    <formula>Total_Failure_Parent__c +  Total_Failure_Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of records failed during the process</inlineHelpText>
    <label>Total Failure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>