oqct-app/main/default/objects/DC_Result__c/fields/Total_Failure_Child__c.field-meta.xml
<CustomField>
    <fullName>Total_Failure_Child__c</fullName>
    <description>The total number of records of child that were failed</description>
    <inlineHelpText>The total number of records of child that were failed</inlineHelpText>
    <label>Total Failure (Child)</label>
    <summarizedField>DC_Related_Result__c.Total_Related_Failure__c</summarizedField>
    <summaryForeignKey>DC_Related_Result__c.DC_Result__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>