oqct-app/main/default/objects/DC_Result__c/fields/Total_Failure_Parent__c.field-meta.xml
<CustomField>
    <fullName>Total_Failure_Parent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of records of parent that were failed</description>
    <inlineHelpText>The total number of records of parent that were failed</inlineHelpText>
    <label>Total Failure (Parent)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>