oqct-app/main/default/objects/DC_Result__c/fields/Total_File_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_File_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total files attached with the result</description>
    <inlineHelpText>The total files attached with the result</inlineHelpText>
    <label>Total File Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>