oqct-app/main/default/objects/DC_Result__c/fields/Total_File_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Total_File_Size_Bytes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The size of total files (in bytes) associated with the DC-Result record</description>
    <inlineHelpText>The size of total files (in bytes) associated with the DC-Result record</inlineHelpText>
    <label>Total File Size (Bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>