oqct-app/main/default/objects/DC_Result__c/fields/Total_Success__c.field-meta.xml
<CustomField>
    <fullName>Total_Success__c</fullName>
    <description>The total number of records succeeded during the process</description>
    <formula>Total_Success_Parent__c +  Total_Success_Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of records succeeded during the process</inlineHelpText>
    <label>Total Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>